
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:weightSum="1"
    >

    <!--
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/versionimage" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txt_device_version"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_device_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:text="v1.0.0"
                android:textSize="18dp" />

        </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_current_version"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt_current_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="vx.x.x"
            android:gravity="center_horizontal"
            android:textSize="18dp" />

        </LinearLayout>


    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/version_update"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/txt_versionupdate"
            android:onClick="onClickedButtonVersionout"
            />

           <!--

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            android:visibility="visible"
            ads:adUnitId="@string/detail_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        -->


    </LinearLayout>



</LinearLayout>
